# FrameworkBenchmarks

frameworks/Rust/actix/: Cargo.toml  benchmark_config.json
frameworks/Rust/actix-4/: Cargo.toml  README.md  actix-4-mongodb.dockerfile  actix-4-pg-deadpool.dockerfile  actix-4-pg.dockerfile  actix-4.dockerfile  benchmark_config.json  config.toml
frameworks/Rust/actix-4/src/: main.rs  main_mongodb.rs  main_pg.rs  main_pg_deadpool.rs  models.rs  utils.rs
frameworks/Rust/actix/src/: main_mongodb.rs  main_pg_deadpool.rs
frameworks/Rust/axum/: axum-mongo.dockerfile
frameworks/Rust/axum/src/: database_mongo.rs  database_pg_pool.rs  main_mongo.rs  main_pg_pool.rs
