[package]
name = "actix-4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "actix-4"
path = "src/main.rs"

[[bin]]
name = "actix-4-mongodb"
path = "src/main_mongodb.rs"

[dependencies]
anyhow = "1"
actix-http = { version = "3.0.0-beta.18", default-features = false }
actix-web = { version = "4.0.0-beta.19", default-features = false }
serde = { version = "1", features = ["derive"] }
simd-json = "0.3"
simd-json-derive = "0.1.9"
bytes = "0.5.3"
mongodb = "2"
futures = "0.3"
yarte = { version = "0.14", features = ["bytes-buf"] }
env_logger = "0.8"
log = "0.4"
serde_json = "1"